# evaluation

./: Makefile  README.md  pyproject.toml
.github/workflows/: run-linters.yml  run-pytest.yml
example_result/: README.md
src/road_core_eval/: driver.py  evaluate.py  query_rag.py  response_evaluation.py
src/road_core_eval/utils/: models.py  plot.py  prompts.py  rag.py  relevancy_score.py  response.py  score.py  similarity_score_llm.py
tests/mocks/: __init__.py  mock_classes.py
tests/utils/: __init__.py  test_similarity_score_llm.py
