[project]
name = "road-core-eval"
version = "0.1.0"
description = "Evaluation tooling for road-core"
authors = []

# always generate Python 3.11-compatible code.
target-version = "py311"
lint.pydocstyle.convention = "google"
line-length = 100


dependencies = [
    "pdm==2.21.0",
    "pandas==2.1.4",
    "httpx==0.27.2",
    "langchain==0.3.12",
    "langchain-ibm==0.3.2",
    "llama-index==0.12.2",
    "llama-index-core==0.12.2",
    "llama-index-vector-stores-faiss==0.3.0",
    "llama-index-embeddings-huggingface==0.4.0",
    "faiss-cpu==1.9.0.post1",
    "sentence-transformers==3.1.1",
    "openai==1.54.3",
    "pyarrow==18.0.0",
    "ibm-generative-ai==3.0.0",
    "ibm-cos-sdk==2.13.6",
    "langchain-openai==0.2.9",
    "azure-identity==1.18.0",
    "langchain-community==0.3.5",
    "huggingface_hub==0.26.1",
    "ibm-watsonx-ai==1.1.25",
    "urllib3==2.2.3",
    "nltk==3.9.1",
    "aiohttp==3.11.10",
    "scikit-learn==1.5.2",
    "tqdm==4.67.1",
    "findpython==0.6.2",
    "filelock==3.16.1",
    "ffmpy==0.4.0",
    "llama-index-vector-stores-postgres>=0.4.0",
    "rouge-score==0.1.2",
    "fastparquet==2024.5.0",
    "torch==2.6.0+cpu",
    "road-core @ git+https://github.com/road-core/service.git",
    "matplotlib>=3.10.1",
]
requires-python = ">=3.11.1,<=3.12.8"
readme = "README.md"
license = {text = "Apache"}

# The following section is needed only for torch[cpu] variant on Linux,
# because this variant need to be downloaded from external link, not from
# standard Python package index:
#
[[tool.pdm.source]]
type = "find_links"
url = "https://download.pytorch.org/whl/cpu/torch/"
name = "torch"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
